--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,12 +1,1 @@
-<div id="chessboard">
-  <div class="pull-left {{chess.turn()}}">
-     <div class="column pull-left" ng-repeat="(key, column) in board" ng-model="column">
-          <div ng-repeat="row in column" ng-click="selectPiece(key+row)" ng-model="row" class="{{chess.get(key+row).color}} text-center {{_.contains(moves, key+row)?'valid':'invalid'}} square {{chess.square_color(key+row)}}" data-square="{{key+row}}">
-               <span class='piece' data-color="{{chess.get(key+row).color}}" data-type="{{chess.get(key+row).color}}" ng-bind-html="chess.symbols[chess.get(key+row).color][chess.get(key+row).type]">
-               </span>
-          </div>
-     </div>
-  </div>
-  {{moves}}
-  <span class='piece' ng-bind-html="chess.symbols[chess.turn()]['k']"></span>
-</div>
+<a href="#/play/{{uniq}}" class="btn btn-primary">New Game</a>
