--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,2 +1,24 @@
 
 <a href="#/play/{{uniq}}" class="btn btn-primary">New Game</a>
+<button class="btn btn-primary" data-toggle="modal" data-target="#myModal">Join Game</button>
+
+<div class="modal fade" id="myModal">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+        <h4 class="modal-title">Join a game</h4>
+      </div>
+      <div class="modal-body">
+        <form role="form">
+          <input class="form-control" type="text" ng-model="id"/>
+          <a href="#/play/{{id}}" class="btn btn-primary">Join</a>
+        </form>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Save changes</button>
+      </div>
+    </div><!-- /.modal-content -->
+  </div><!-- /.modal-dialog -->
+</div><!-- /.modal -->
