--- a/app/views/main.html
+++ b/app/views/main.html
@@ -12,7 +12,7 @@
       <div class="modal-body">
         <form role="form">
           <input class="form-control" type="text" ng-model="id"/>
-          <a href="#/play/{{id}}" class="btn btn-primary">Join</a>
+          <a href="#/play/{{id}}?joining=true" class="btn btn-primary">Join</a>
         </form>
       </div>
       <div class="modal-footer">
