--- a/app/views/game.html
+++ b/app/views/game.html
@@ -1,5 +1,5 @@
 <div id="chessboard">
-  <div class="pull-left {{chess.turn()}}">
+  <div class="pull-left {{color}}">
      <div class="column pull-left" ng-repeat="(key, column) in board" ng-model="column">
           <div ng-repeat="row in column" ng-click="selectPiece(key+row)" ng-model="row" class="{{chess.get(key+row).color}} text-center {{_.contains(moves, key+row)?'valid':'invalid'}} square {{chess.square_color(key+row)}}" data-square="{{key+row}}">
                <span class='piece' data-color="{{chess.get(key+row).color}}" data-type="{{chess.get(key+row).color}}" ng-bind-html="chess.symbols[chess.get(key+row).color][chess.get(key+row).type]">
