CHES-7 #time 3h #comment essentially ready, need to update exchange to track labels inside the peer manager object

--- a/app/views/game.html
+++ b/app/views/game.html
@@ -10,5 +10,6 @@
   {{moves}}
   <span class='piece' ng-bind-html="chess.symbols[chess.turn()]['k']"></span>
 </div>
+<button class="btn btn-primary" ng-click="startVideoChat()">Chat!</button>
 <video muted ng-src="{{local_stream}}" autoplay></video>
 <video ng-src="{{stream}}" autoplay></video>
