--- a/app/views/game.html
+++ b/app/views/game.html
@@ -13,3 +13,26 @@
 <button class="btn btn-primary" ng-click="startVideoChat()">Chat!</button>
 <video muted ng-src="{{local_stream}}" autoplay></video>
 <video ng-src="{{stream}}" autoplay></video>
+
+<button class="btn btn-primary" data-toggle="modal" data-target="#invite" ng-show="!connection && im_host">Join Game</button>
+
+<div class="modal fade" id="invite">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+        <h4 class="modal-title">Invite a friend</h4>
+      </div>
+      <div class="modal-body">
+        <form role="form">
+          <input class="form-control" type="text" ng-model="email"/>
+          <a href="mailto:{{email}}?subject={{invite_subject}}&body={{invite_body}}" class="btn btn-primary">Join</a>
+        </form>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Save changes</button>
+      </div>
+    </div><!-- /.modal-content -->
+  </div><!-- /.modal-dialog -->
+</div><!-- /.modal -->
