--- a/app/views/game.html
+++ b/app/views/game.html
@@ -1,5 +1,4 @@
-<paper-fab icon="social:person-add" id="invite" data-toggle="modal" data-target="#invite_modal"></paper-fab>
-<button ng-click="startVideoChat()">chat</button>
+<paper-fab icon="social:person-add" id="invite" data-toggle="modal" data-target="#invite_modal" ng-hide="channel"></paper-fab>
 <div id="chessboard" ng-show="channel">
   <div class="pull-left {{color}}">
      <div class="column pull-left" ng-repeat="(key, column) in board" ng-model="column">
