--- a/app/views/game.html
+++ b/app/views/game.html
@@ -1,4 +1,5 @@
 <paper-fab icon="social:person-add" id="invite" data-toggle="modal" data-target="#invite_modal" ng-hide="channel"></paper-fab>
+
 <div id="chessboard" ng-show="channel">
   <div class="pull-left {{color}}">
      <div class="column pull-left" ng-repeat="(key, column) in board" ng-model="column">
@@ -7,14 +8,16 @@
                </span>
           </div>
      </div>
+  <span class='piece' ng-bind-html="chess.symbols[chess.turn()]['k']"></span>
   </div>
   {{moves}}
-  <span class='piece' ng-bind-html="chess.symbols[chess.turn()]['k']"></span>
+
 </div>
+<video muted ng-src="{{stream}}" autoplay height="400px"></video>
 
 
-<video muted ng-src="{{local_stream}}" autoplay></video>
-<video muted ng-src="{{stream}}" autoplay></video>
+<!-- <video muted ng-src="{{local_stream}}" autoplay></video> -->
+
 
 
 
