--- a/app/views/game.html
+++ b/app/views/game.html
@@ -1,7 +1,8 @@
 <paper-fab icon="social:person-add" id="invite" data-toggle="modal" data-target="#invite_modal" ng-hide="channel"></paper-fab>
-<paper-fab icon="communication:hangout-video" ng-show="channel"></paper-fab>
+<paper-fab class="center" icon="communication:hangout-video" ng-show="channel && !stream" ng-click="startVideoChat()"></paper-fab>
+<video class="center" muted ng-src="{{stream}}" autoplay height="256px" ng-show="stream"></video>
 <div id="chessboard" ng-show="channel">
-  <div class="center {{color}}">
+  <div class="center board {{color}}">
      <div class="column pull-left" ng-repeat="(key, column) in board" ng-model="column">
           <div ng-repeat="row in column" ng-click="selectPiece(key+row)" ng-model="row" class="{{chess.get(key+row).color}} text-center {{_.contains(moves, key+row)?'valid':'invalid'}} square {{chess.square_color(key+row)}}" data-square="{{key+row}}">
                <span class='piece' data-color="{{chess.get(key+row).color}}" data-type="{{chess.get(key+row).color}}" ng-bind-html="chess.symbols[chess.get(key+row).color][chess.get(key+row).type]">
@@ -13,7 +14,7 @@
   {{moves}}
 
 </div>
-<video muted ng-src="{{stream}}" autoplay height="400px"></video>
+
 
 
 <!-- <video muted ng-src="{{local_stream}}" autoplay></video> -->
