better invite behavior

--- a/app/views/game.html
+++ b/app/views/game.html
@@ -14,7 +14,7 @@
   {{moves}}
 </div>
 
-<paper-dialog heading="Invite" transition="paper-dialog-transition-center" id="invite_modal">
+<paper-dialog opened=true heading="Invite" transition="paper-dialog-transition-center" id="invite_modal">
   <p>Send this link: <span>{{invite_body}}</span></p>
   <p>OR</p>
   <paper-input label="Email a friend" ng-model="email" floatingLabel="true"></paper-input>
