--- a/views/main.html
+++ b/views/main.html
@@ -1,4 +1,10 @@
 
-<a href="#/play/{{uniq}}">
+<a href="#/play/white/{{uniq}}" style="color:black;">
+  <!-- host -->
   <paper-button label="&#9817;" id="enter"></paper-button>
+</a>
+
+<a href="#" style="color:black;">
+  <!-- join -->
+  <paper-button label="&#9823;" id="enter"></paper-button>
 </a>
