updates to show moves on mobile, shows when in check and game over

--- a/views/game.html
+++ b/views/game.html
@@ -13,3 +13,5 @@
     </a>
   </div>
 </paper-dialog>
+<paper-toast text="Check." id="check"></paper-toast>
+<paper-toast text="Game." id="game_over"></paper-toast>
